# ai-dev-assistant

./: .env.example  .gitattributes  .gitignore  DEPLOY.md  LICENSE  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: main.py
backend/app/api/v1/: auth.py  chat.py  conversations.py  debug.py  pair.py  repositories.py  router.py  search.py  share.py
backend/app/core/: __init__.py  auth.py  config.py  deps.py  lifespan.py  middleware.py  observability.py  security.py
backend/app/db/: models.py  session.py
backend/app/llm/: __init__.py  factory.py  prompts.py
backend/app/llm/providers/: deepseek_provider.py  gemini_provider.py  openai_provider.py  qwen_provider.py
backend/app/rag/: pipeline.py  seed.py
backend/app/rag/chunking/: __init__.py  chunker.py
backend/app/rag/embeddings/: __init__.py  bge.py
backend/app/rag/ingestion/: __init__.py
backend/app/rag/retrieval/: hybrid.py  reranker.py
backend/app/rag/vectorstore/: __init__.py  factory.py  pgvector_store.py
backend/app/schemas/: __init__.py  auth.py  chat.py  conversation.py  llm.py
backend/app/services/: __init__.py  chat_service.py  conversation_service.py  debug_service.py  enrich.py  pair_service.py  repo_registry.py  repository_service.py  search_service.py
backend/tests/: conftest.py  test_api.py  test_auth.py  test_conversations.py  test_followups.py  test_rag_integration.py  test_repo_registry.py  test_security.py  test_share.py
docs/: ARCHITECTURE.md  MILESTONES.md
(+99 files in other folders)
